assignments/assignment1/backend-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  labels:
    app: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  strategy: {}
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - image: ghcr.io/eficode-academy/quotes-flask-backend:release
          name: backend
          ports:
            - containerPort: 5000
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
