assignments/assignment1/db-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  labels:
    app: postgres
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - image: postgres:14.3
          name: postgres
          ports:
            - containerPort: 5432
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
